--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"express": "^4.14.0"
 	},
+	"author": "Kostiantyn Shakhzadov",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js"
